stop long strings going off screen in terminal

--- a/components/Terminal/Terminal.module.scss
+++ b/components/Terminal/Terminal.module.scss
@@ -9,6 +9,7 @@
   background: colours.$steelgrey;
   height: 100%;
   cursor: text;
+  word-break: break-word;
 
   a {
     color: colours.$whisper;
